--- a/mangoxo.html
+++ b/mangoxo.html
@@ -1,8 +1,8 @@
 <html>
-<head>
-<title>LIKE</title>
-</head>
-<body>
-<h1>MANGO<h1>
-</body>
+  <head>
+    <title>LIKE</title>
+      </head>
+  <body>
+    I like English
+  </body>
 </html>
