--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-<meta http-equiv="Content-Type"
-content="text/html;charset="utf-8">
+<meta charset="utf-8">
 <head>
     <title></title>
     <link href="music.css" rel="stylesheet" type="text/css" />
