--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
                                   
 </head>
 <body>
+<h3><a href="netease.html">购物</a>
     <div class="show1">
         <div class="show2">
             <ul>
