--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="keep/【日系】这些歌曲高潮一定能震撼你的灵魂_109951163710996163.jpg" width="350" height="350">
                 <a href="#">
                     <div class="nav9">
-                        <h3>【日系】这些歌曲高潮一定能震撼你的灵</h3>
+                        <h3>【日系】这些歌曲高潮一定能震撼你</h3>
                     </div>
                 </a>
             </div>
