--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
                                   
 </head>
 <body>
-<h3><a href="netease.html">购物</a>
-    <div class="show1">
+
         <div class="show2">
             <ul>
                 <li class="nav1">欢迎</li>
@@ -39,14 +38,14 @@
                 <img src="keep/【日系】这些歌曲高潮一定能震撼你的灵魂_109951163710996163.jpg" width="350" height="350">
                 <a href="#">
                     <div class="nav9">
-                        <h3>【日系】这些歌曲高潮一定能震撼你</h3>
+                        <h3>【日系】这些歌曲高潮一定能震撼</h3>
                     </div>
                 </a>
             </div>
 
             <div class="nav7">
                 <img src="keep/「ACG」由衷的青睐，源自真心的美好_109951163697466861.jpg" width="350" height="350">
-                <a href="#"> <div class="nav10"> <h3>「ACG」由衷的青睐，源自真心的美好</h3> </div> </a>
+                <a href="#"> <div class="nav10"> <h3>「ACG」由衷的青睐，源自真心的</h3> </div> </a>
             </div>
         </div>
 
