--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
                                   
 </head>
 <body>
-
+<div class="show1">
         <div class="show2">
             <ul>
                 <li class="nav1">欢迎</li>
