--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title></title>
+    <title>郭赋荣</title>
     <link href="music.css" rel="stylesheet" type="text/css" />
 
                                   
