--- a/index.html
+++ b/index.html
@@ -1,88 +1,12 @@
 <html>
 <head>
-    <title>郭赋荣</title>
-    <link href="music.css" rel="stylesheet" type="text/css" />
-
-                                  
+<title>郭赋荣</title>
+<link href="HTML.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="show1">
-        <div class="show2">
-            <ul>
-                <li class="nav1">欢迎</li>
-                <li><input type="text" name="text" placeholder="音乐人" class="nav2" /></li>
-                <li class="nav3"><buttom type="submit"></buttom></li>
-                <li class="nav4"><a href="https://music.163.com/">发现音乐</a></li>
-                <li class="nav4"><a href="#">我的音乐</a></li>
-                <li class="nav4"><a href="#">音乐人</a></li>
-
-
-            </ul>
-
-        </div>
-        <div class="show3">
-            <div class="nav5">
-                <span class="nav6"><a href="#">推荐</a></span>
-                <span class="nav6"><a href="#">排行榜</a></span>
-                <span class="nav6"><a href="#">歌单</a></span>
-                <span class="nav6"><a href="#">主播电台</a></span>
-                <span class="nav6"><a href="#">歌手</a></span>
-                <span class="nav6"><a href="#">新碟上架</a></span>
-            </div>
-            <h1 style="text-align:center;color: #ff4768;">歌单推荐</h1>
-            <div class="nav7">
-                <img src="keep/一 个 很 丧 的 歌 单 。_109951163705626668.jpg" width="350" height="350">
-                <a href="#"> <div class="nav8"> <h3>一 个 很 丧 的 歌 单 </h3> </div> </a>
-            </div>
-            <div class="nav7">
-                <img src="keep/【日系】这些歌曲高潮一定能震撼你的灵魂_109951163710996163.jpg" width="350" height="350">
-                <a href="#">
-                    <div class="nav9">
-                        <h3>【日系】这些歌曲高潮一定能震撼</h3>
-                    </div>
-                </a>
-            </div>
-
-            <div class="nav7">
-                <img src="keep/「ACG」由衷的青睐，源自真心的美好_109951163697466861.jpg" width="350" height="350">
-                <a href="#"> <div class="nav10"> <h3>「ACG」由衷的青睐，源自真心的</h3> </div> </a>
-            </div>
-        </div>
-
-
-        <div class="show4">
-            <h1 style="text-align:center;color: #ff4768;">MV</h1>
-            <div class="nav11">
-                <img src="keep/Snipaste_2018-12-10_19-17-08.jpg" />
-                <ul>
-                    <li>Coupe</li>
-                    <li style="color:#999999">吴亦凡</li>
-                    <li style="color:#999999">15.3万</li>
-                </ul>
-
-            </div>
-            <div class="nav11">
-                <img src="keep/Snipaste_2018-12-10_19-17-25.jpg" />
-                <ul>
-                    <li>答案之书</li>
-                    <li style="color:#999999">容祖儿</li>
-                    <li style="color:#999999">12.9万</li>
-                </ul>
-            </div>
-            <div class="nav11">
-                <img src="keep/Snipaste_2018-12-10_19-17-58.jpg" />
-                <ul>
-                    <li>心形宇宙（《将夜》影视剧插曲）</li>
-                    <li style="color:#999999">冯提莫</li>
-                    <li style="color:#999999">10.8万</li>
-                </ul>
-            </div>
-
-        </div>
-
-
-    </div>
-
+<div class="show2"></div>
+</div>
 
 </body>
 </html>
